--- a/MediaOrganiserCLI/MediaOrganiserCLI.csproj
+++ b/MediaOrganiserCLI/MediaOrganiserCLI.csproj
@@ -22,6 +22,12 @@
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>true</Externalconsole>
     <Commandlineparameters>/Volumes/Torrents/Game of Thrones s01,/Volumes/Torrents/Game.of.Thrones.S02/ /Users/Dipesh/Desktop/OutputMedia</Commandlineparameters>
+    <CustomCommands>
+      <CustomCommands>
+        <Command type="AfterBuild" command="mkdir -p Merged" workingdir="${TargetDir}" />
+        <Command type="AfterBuild" command="mono ../../Externals/ILRepack.exe /out:Merged/MediaOrganiserCLI.exe MediaOrganiserCLI.exe *.dll" workingdir="${TargetDir}" externalConsole="true" pauseExternalConsole="true" />
+      </CustomCommands>
+    </CustomCommands>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
