--- a/MediaOrganiser.Shows/MediaOrganiser.Media.csproj
+++ b/MediaOrganiser.Shows/MediaOrganiser.Media.csproj
@@ -7,7 +7,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{74BB1CC6-9E2C-4BDA-BEC3-F40EC694E187}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MediaOrganiser.Show</RootNamespace>
+    <RootNamespace>MediaOrganiser.Media</RootNamespace>
     <AssemblyName>MediaOrganiser.Show</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -38,18 +38,19 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Compile Include="IShow.cs" />
-    <Compile Include="Show.cs" />
-    <Compile Include="Details\IShowDetailsAdditional.cs" />
-    <Compile Include="Details\ShowDetailsAdditionalTVDB.cs" />
-    <Compile Include="Details\ShowDetailsAtomic.cs" />
-    <Compile Include="Details\IShowDetailsBasic.cs" />
-    <Compile Include="Details\ShowDetailsBasicRegex.cs" />
     <Compile Include="Externals\AtomicParsley.cs" />
+    <Compile Include="IMedia.cs" />
+    <Compile Include="Shows\IShow.cs" />
+    <Compile Include="Shows\Show.cs" />
+    <Compile Include="Shows\ShowDetails\IShowDetailsAdditional.cs" />
+    <Compile Include="Shows\ShowDetails\ShowDetailsAdditionalTVDB.cs" />
+    <Compile Include="Shows\ShowDetails\ShowDetailsAtomic.cs" />
+    <Compile Include="Shows\ShowDetails\IShowDetailsBasic.cs" />
+    <Compile Include="Shows\ShowDetails\ShowDetailsBasicRegex.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Details\" />
     <Folder Include="Externals\" />
+    <Folder Include="Shows\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Externals\AtomicParsley" />
@@ -63,6 +64,10 @@
     <ProjectReference Include="..\System.Logging\System.Logging.csproj">
       <Project>{D0B1A5D1-64BE-416A-8522-EA6998C93C29}</Project>
       <Name>System.Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MediaOrganiser.Convertor\MediaOrganiser.Convertor.csproj">
+      <Project>{E2CBAD9F-2047-4AEC-858D-C7F008E1D894}</Project>
+      <Name>MediaOrganiser.Convertor</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
