* Updated iTunes importer script to esacpe quotes. * Renamed ShowDetailsAdditionalTVDB to ShowDetailsTVDB * Renamed ShowDetailsBasicRege to ShowDetailsRegex * Updated ShowDetailsTVDB to implement IBasicShowDetails, hence allowing ShowName to be obtains from TVDB rather then from ShowDetailsBasic. This will help in maintain the correct casing of show names. * Implemented the TVDB caching. As a result DoExhustiveExtraction will always try to get details from TVDB even if details found from file meta data. This was done due to the cost being low to get recheck/reget the details. * Since caching requires a temp file. The temp working area directory structure has been changed from MediaOrganiserWorkingArea to MediaOrganiser/WorkingArea  and the cache directory being MediaOrganiser/TVDBCache

--- a/MediaOrganiser.Media/MediaOrganiser.Media.csproj
+++ b/MediaOrganiser.Media/MediaOrganiser.Media.csproj
@@ -43,14 +43,14 @@
     <Compile Include="Shows\IShow.cs" />
     <Compile Include="Shows\Show.cs" />
     <Compile Include="Shows\ShowDetails\IShowDetailsAdditional.cs" />
-    <Compile Include="Shows\ShowDetails\ShowDetailsAdditionalTVDB.cs" />
     <Compile Include="Shows\ShowDetails\ShowDetailsAtomic.cs" />
     <Compile Include="Shows\ShowDetails\IShowDetailsBasic.cs" />
-    <Compile Include="Shows\ShowDetails\ShowDetailsBasicRegex.cs" />
     <Compile Include="Movies\IMovie.cs" />
     <Compile Include="Movies\IMovieDetailsBasic.cs" />
     <Compile Include="Movies\Movie.cs" />
     <Compile Include="Movies\MovieDetailsBasicRegex.cs" />
+    <Compile Include="Shows\ShowDetails\ShowDetailsTVDB.cs" />
+    <Compile Include="Shows\ShowDetails\ShowDetailsRegex.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Externals\" />
