* Added banner art. * Fixed a bug in the MoveTo function that was caused when moving a file to the exact same location and deleting the original file when the overwrite flag is set.

--- a/MediaOrganiserCLI/MediaOrganiserCLI.csproj
+++ b/MediaOrganiserCLI/MediaOrganiserCLI.csproj
@@ -21,7 +21,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>true</Externalconsole>
-    <Commandlineparameters>~/Scripts/MediaOrganiserCLI.exe -i ~/Desktop/Greys\ Anatomy/ -a -c</Commandlineparameters>
+    <Commandlineparameters>-e -i ~/Desktop/Vids/ -o ~/Desktop/Output/</Commandlineparameters>
     <CustomCommands>
       <CustomCommands>
         <Command type="AfterBuild" command="mkdir -p Merged" workingdir="${TargetDir}" />
