* Made the AtomicParsely and HandBrakeCLI embedded files within their respective dlls. This change is untested.

--- a/MediaOrganiser.Convertor/MediaOrganiser.Convertor.csproj
+++ b/MediaOrganiser.Convertor/MediaOrganiser.Convertor.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Mono.Posix" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Externals\HandBrake.cs" />
@@ -42,12 +43,12 @@
     <Folder Include="Externals\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Externals\HandBrakeCLI" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\System.Files\System.Files.csproj">
       <Project>{E7EB41D8-6079-4BCA-BC6B-8EA46489B60F}</Project>
       <Name>System.Files</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Externals\HandBrakeCLI" />
   </ItemGroup>
 </Project>
