--- a/MediaOrganiser.Media/MediaOrganiser.Media.csproj
+++ b/MediaOrganiser.Media/MediaOrganiser.Media.csproj
@@ -35,6 +35,7 @@
     <Reference Include="TvdbLib">
       <HintPath>Externals\TVDBLib.dll</HintPath>
     </Reference>
+    <Reference Include="Mono.Posix" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -58,7 +59,6 @@
     <Folder Include="Movies\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Externals\AtomicParsley" />
     <None Include="Externals\TVDBLib.dll" />
   </ItemGroup>
   <ItemGroup>
@@ -74,5 +74,8 @@
       <Project>{E2CBAD9F-2047-4AEC-858D-C7F008E1D894}</Project>
       <Name>MediaOrganiser.Convertor</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Externals\AtomicParsley" />
   </ItemGroup>
 </Project>
