* Update HandBrakeCLI and AtomicParsely usage and retrieval to use reflection for creating temp location. * Update Artwork to support mutiple files. * Both these updates still need to be tested.

--- a/MediaOrganiser.Convertor/MediaOrganiser.Convertor.csproj
+++ b/MediaOrganiser.Convertor/MediaOrganiser.Convertor.csproj
@@ -49,6 +49,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Externals\HandBrakeCLI" />
+    <EmbeddedResource Include="Externals\HandBrakeCLI.exe" />
   </ItemGroup>
 </Project>
