--- a/Src/MediaOrganiserApp/Info.plist
+++ b/Src/MediaOrganiserApp/Info.plist
@@ -8,6 +8,8 @@
 	<string>MediaOrganiser</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.7</string>
 	<key>NSMainNibFile</key>
