--- a/Src/MediaOrganiserApp/MediaOrganiserApp.csproj
+++ b/Src/MediaOrganiserApp/MediaOrganiserApp.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0400A34E-8CFC-4D5F-8771-5B06BF82229F}</ProjectGuid>
+    <ProjectGuid>{FE5F547A-A05E-4BA0-A941-65C0BF283552}</ProjectGuid>
     <ProjectTypeGuids>{948B3504-5B70-4649-8FE4-BDE1FB46EC69};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MediaOrganiserGUI</RootNamespace>
-    <AssemblyName>MediaOrganiserGUI</AssemblyName>
+    <RootNamespace>MediaOrganiserApp</RootNamespace>
+    <AssemblyName>MediaOrganiser</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -19,18 +19,19 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IncludeMonoRuntime>false</IncludeMonoRuntime>
+    <IncludeMonoRuntime>true</IncludeMonoRuntime>
     <PlatformTarget>x86</PlatformTarget>
     <EnablePackageSigning>false</EnablePackageSigning>
     <ConsolePause>false</ConsolePause>
     <EnableCodeSigning>false</EnableCodeSigning>
     <CreatePackage>false</CreatePackage>
     <CodeSigningKey>Mac Developer</CodeSigningKey>
+    <PackageSigningKey>3rd Party Mac Developer Installer</PackageSigningKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
+    <OutputPath>bin\Debug</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <IncludeMonoRuntime>false</IncludeMonoRuntime>
@@ -45,7 +46,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|x86' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\x86\AppStore</OutputPath>
+    <OutputPath>bin\Debug</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <IncludeMonoRuntime>true</IncludeMonoRuntime>
@@ -65,9 +66,6 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="MonoMac" />
-    <Reference Include="CommandLine">
-      <HintPath>..\MediaOrganiserCLI\Externals\CommandLine.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainWindow.cs" />
@@ -98,6 +96,10 @@
     <ProjectReference Include="..\System.Files\System.Files.csproj">
       <Project>{E7EB41D8-6079-4BCA-BC6B-8EA46489B60F}</Project>
       <Name>System.Files</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\System.Logging\System.Logging.csproj">
+      <Project>{D0B1A5D1-64BE-416A-8522-EA6998C93C29}</Project>
+      <Name>System.Logging</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
