--- a/Src/MediaOrganiser.Finders/MediaOrganiser.Finders.csproj
+++ b/Src/MediaOrganiser.Finders/MediaOrganiser.Finders.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{039420CF-CF63-421A-8EFC-71109C909D30}</ProjectGuid>
+    <ProjectGuid>{48B2C36B-DF55-424E-9977-CF9B4FBD1731}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MediaOrganiser</RootNamespace>
-    <AssemblyName>MediaOrganiser</AssemblyName>
+    <RootNamespace>MediaOrganiser.Finders</RootNamespace>
+    <AssemblyName>MediaOrganiser.Finders</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -19,7 +19,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
-    <Externalconsole>true</Externalconsole>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
@@ -28,35 +28,28 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
-    <Externalconsole>true</Externalconsole>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Organiser.cs" />
-  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Compile Include="IMediaFinder.cs" />
+    <Compile Include="ShowFinder.cs" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\System.Files\System.Files.csproj">
       <Project>{E7EB41D8-6079-4BCA-BC6B-8EA46489B60F}</Project>
       <Name>System.Files</Name>
     </ProjectReference>
-    <ProjectReference Include="..\System.Logging\System.Logging.csproj">
-      <Project>{D0B1A5D1-64BE-416A-8522-EA6998C93C29}</Project>
-      <Name>System.Logging</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\System.Threading.Helpers\System.Threading.Helpers.csproj">
-      <Project>{1BD63904-18F6-437A-AE3F-B1A79AD566DD}</Project>
-      <Name>System.Threading.Helpers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Apple.iTunes\Apple.iTunes.csproj">
-      <Project>{F15396F9-463B-4407-8C87-2F464902382A}</Project>
-      <Name>Apple.iTunes</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MediaOrganiser.Media\MediaOrganiser.Media.csproj">
       <Project>{74BB1CC6-9E2C-4BDA-BEC3-F40EC694E187}</Project>
       <Name>MediaOrganiser.Media</Name>
     </ProjectReference>
+    <ProjectReference Include="..\System.Logging\System.Logging.csproj">
+      <Project>{D0B1A5D1-64BE-416A-8522-EA6998C93C29}</Project>
+      <Name>System.Logging</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
 </Project>
