--- a/Src/MediaOrganiserCLI/MediaOrganiserCLI.csproj
+++ b/Src/MediaOrganiserCLI/MediaOrganiserCLI.csproj
@@ -21,10 +21,11 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>true</Externalconsole>
-    <Commandlineparameters>-a -e -i ~/Desktop/ITCrowd/</Commandlineparameters>
+    <Commandlineparameters>-a -e -d -i ~/Desktop/In/</Commandlineparameters>
     <CustomCommands>
       <CustomCommands>
         <Command type="AfterBuild" command="rm -rf ${SolutionDir}/../Output; mkdir ${SolutionDir}/../Output; mono ${SolutionDir}/../Build/ILRepack.exe /out:${SolutionDir}/../Output/MediaOrganiserCLI.exe MediaOrganiserCLI.exe *.dll" workingdir="${TargetDir}" externalConsole="true" pauseExternalConsole="true" />
+        <Command type="BeforeBuild" command="rm -rf *" workingdir="${TargetDir}" />
       </CustomCommands>
     </CustomCommands>
   </PropertyGroup>
@@ -56,6 +57,22 @@
     <ProjectReference Include="..\System.Files\System.Files.csproj">
       <Project>{E7EB41D8-6079-4BCA-BC6B-8EA46489B60F}</Project>
       <Name>System.Files</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Apple.iTunes\Apple.iTunes.csproj">
+      <Project>{F15396F9-463B-4407-8C87-2F464902382A}</Project>
+      <Name>Apple.iTunes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MediaOrganiser.Media\MediaOrganiser.Media.csproj">
+      <Project>{74BB1CC6-9E2C-4BDA-BEC3-F40EC694E187}</Project>
+      <Name>MediaOrganiser.Media</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MediaOrganiser.Finders\MediaOrganiser.Finders.csproj">
+      <Project>{48B2C36B-DF55-424E-9977-CF9B4FBD1731}</Project>
+      <Name>MediaOrganiser.Finders</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\System.Logging\System.Logging.csproj">
+      <Project>{D0B1A5D1-64BE-416A-8522-EA6998C93C29}</Project>
+      <Name>System.Logging</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
