* Added a force conversion flag. This is enable the handling of those broken files whose bad Atom prevents it being added correctly. This essentually acts as a reset for the media file. * Updated converted output file to <OldName>.converted.<FileExtension>. This change was required as when forcing a conversion of a file whose name is the same, then the conversion fails as HandBrake requires a seperate file for writing. * Updated MediaOrganiser working directory to used namspace folder convention like the other output resouce files (ie. subfolder for each sub-namesapce)

--- a/Src/MediaOrganiserCLI/MediaOrganiserCLI.csproj
+++ b/Src/MediaOrganiserCLI/MediaOrganiserCLI.csproj
@@ -21,7 +21,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>true</Externalconsole>
-    <Commandlineparameters>-a -e -w -i ~/Desktop/In/</Commandlineparameters>
+    <Commandlineparameters>-a -x -f -i ~/Desktop/Suits.S02E05.HDTV.x264-COMPULSiON.\[VTV\].mp4</Commandlineparameters>
     <CustomCommands>
       <CustomCommands>
         <Command type="AfterBuild" command="rm -rf ${SolutionDir}/../Output; mkdir ${SolutionDir}/../Output; mono ${SolutionDir}/../Build/ILRepack.exe /out:${SolutionDir}/../Output/MediaOrganiserCLI.exe MediaOrganiserCLI.exe *.dll" workingdir="${TargetDir}" externalConsole="true" pauseExternalConsole="true" />
