--- a/Src/MediaOrganiser.Organisers/MediaOrganiser.Organisers.csproj
+++ b/Src/MediaOrganiser.Organisers/MediaOrganiser.Organisers.csproj
@@ -57,4 +57,7 @@
       <Name>System.Threading.Helpers</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Core" />
+  </ItemGroup>
 </Project>
