--- a/Src/MediaOrganiser.Media/MediaOrganiser.Media.csproj
+++ b/Src/MediaOrganiser.Media/MediaOrganiser.Media.csproj
@@ -36,6 +36,10 @@
       <HintPath>Externals\TVDBLib.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Posix" />
+    <Reference Include="System.Files">
+      <HintPath>..\_bin_deployableAssemblies\System.Files.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Core" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -62,10 +66,6 @@
     <None Include="Externals\TVDBLib.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\System.Files\System.Files.csproj">
-      <Project>{E7EB41D8-6079-4BCA-BC6B-8EA46489B60F}</Project>
-      <Name>System.Files</Name>
-    </ProjectReference>
     <ProjectReference Include="..\System.Logging\System.Logging.csproj">
       <Project>{D0B1A5D1-64BE-416A-8522-EA6998C93C29}</Project>
       <Name>System.Logging</Name>
