--- a/Src/MediaOrganiser.Organisers/MediaOrganiser.Organisers.csproj
+++ b/Src/MediaOrganiser.Organisers/MediaOrganiser.Organisers.csproj
@@ -44,10 +44,6 @@
       <Project>{74BB1CC6-9E2C-4BDA-BEC3-F40EC694E187}</Project>
       <Name>MediaOrganiser.Media</Name>
     </ProjectReference>
-    <ProjectReference Include="..\System.Files\System.Files.csproj">
-      <Project>{E7EB41D8-6079-4BCA-BC6B-8EA46489B60F}</Project>
-      <Name>System.Files</Name>
-    </ProjectReference>
     <ProjectReference Include="..\System.Logging\System.Logging.csproj">
       <Project>{D0B1A5D1-64BE-416A-8522-EA6998C93C29}</Project>
       <Name>System.Logging</Name>
@@ -59,5 +55,8 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Core" />
+    <Reference Include="System.Files">
+      <HintPath>..\_bin_deployableAssemblies\System.Files.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
