--- a/Src/MediaOrganiser.Core.Tests/MediaOrganiser.Core.Tests.csproj
+++ b/Src/MediaOrganiser.Core.Tests/MediaOrganiser.Core.Tests.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7F699C47-0EE4-461C-8D15-6062662CA892}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>MediaOrganiser.Core.Tests</RootNamespace>
     <AssemblyName>MediaOrganiser.Core.Tests</AssemblyName>
   </PropertyGroup>
