Initial System.IO.Abstractions conversion.

--- a/Src/MediaOrganiser.Core.Tests/MediaOrganiser.Core.Tests.csproj
+++ b/Src/MediaOrganiser.Core.Tests/MediaOrganiser.Core.Tests.csproj
@@ -47,4 +47,7 @@
       <Name>MediaOrganiser.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
