--- a/Src/MediaOrganiser.Console/packages.config
+++ b/Src/MediaOrganiser.Console/packages.config
@@ -2,4 +2,5 @@
 <packages>
 	<package id="ManyConsole" version="0.4.2.12" />
 	<package id="NDesk.Options" version="0.2.1" />
+	<package id="System.IO.Abstractions" version="1.4.0.35" />
 </packages>
