--- a/Src/MediaOrganiser.Console/MediaOrganiser.Console.csproj
+++ b/Src/MediaOrganiser.Console/MediaOrganiser.Console.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{873C3B13-86E7-42AD-85C8-AA34E0C0372E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>MediaOrganiser.Console</RootNamespace>
-    <AssemblyName>MediaOrganiser.Console</AssemblyName>
+    <AssemblyName>MediaOrganiser</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>True</DebugSymbols>
@@ -20,6 +20,11 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>True</Externalconsole>
+    <CustomCommands>
+      <CustomCommands>
+        <Command type="AfterBuild" command="rm -rf ${SolutionDir}/../Output; mkdir ${SolutionDir}/../Output; mono ${SolutionDir}/../Build/ILRepack.exe /out:${SolutionDir}/../Output/${TargetName} ${TargetName} *.dll" workingdir="${TargetDir}" externalConsole="True" pauseExternalConsole="True" />
+      </CustomCommands>
+    </CustomCommands>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
