--- a/Src/MediaOrganiser.Console.Tests/MediaOrganiser.Console.Tests.csproj
+++ b/Src/MediaOrganiser.Console.Tests/MediaOrganiser.Console.Tests.csproj
@@ -51,4 +51,7 @@
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
