--- a/Src/MediaOrganiser.Console.Tests/packages.config
+++ b/Src/MediaOrganiser.Console.Tests/packages.config
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
+	<package id="NUnit" version="2.6.2" />
 	<package id="System.IO.Abstractions" version="1.4.0.35" />
+	<package id="System.IO.Abstractions.TestingHelpers" version="1.4.0.35" />
 </packages>
