--- a/Src/MediaOrganiser.Console/MediaOrganiser.Console.csproj
+++ b/Src/MediaOrganiser.Console/MediaOrganiser.Console.csproj
@@ -22,7 +22,7 @@
     <Externalconsole>True</Externalconsole>
     <CustomCommands>
       <CustomCommands>
-        <Command type="AfterBuild" command="rm -rf ${SolutionDir}/../Output; mkdir ${SolutionDir}/../Output; mono ${SolutionDir}/../Build/ILRepack.exe /out:${SolutionDir}/../Output/${TargetName} ${TargetName} *.dll" workingdir="${TargetDir}" externalConsole="True" pauseExternalConsole="True" />
+        <Command type="AfterBuild" command="rm -rf merged; mkdir merged; mono ${SolutionDir}/../Build/ILRepack.exe /out:merged/${TargetName} ${TargetName} *.dll" workingdir="${TargetDir}" externalConsole="True" pauseExternalConsole="True" />
       </CustomCommands>
     </CustomCommands>
   </PropertyGroup>
@@ -34,6 +34,11 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>True</Externalconsole>
+    <CustomCommands>
+      <CustomCommands>
+        <Command type="AfterBuild" command="rm -rf merged; mkdir merged; mono ${SolutionDir}/../Build/ILRepack.exe /out:merged/${TargetName} ${TargetName} *.dll" workingdir="${TargetDir}" externalConsole="True" pauseExternalConsole="True" />
+      </CustomCommands>
+    </CustomCommands>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
