--- a/Src/MediaOrganiser.Core/packages.config
+++ b/Src/MediaOrganiser.Core/packages.config
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
 	<package id="System.IO.Abstractions" version="1.4.0.35" />
+	<package id="taglib" version="2.1.0.0" />
 </packages>
