Moved Organise command into Console from Core.

--- a/Src/MediaOrganiser.Console/MediaOrganiser.Console.csproj
+++ b/Src/MediaOrganiser.Console/MediaOrganiser.Console.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Finders\ShowFinder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Commands\Organise.cs" />
+    <Compile Include="Organiser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
