Initial movie commit.

--- a/Src/MediaOrganiser.Core/MediaOrganiser.Core.csproj
+++ b/Src/MediaOrganiser.Core/MediaOrganiser.Core.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Convertor\Convertor.cs" />
     <Compile Include="Convertor\Externals\HandBrake.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="Media\Movies\IMovie.cs" />
+    <Compile Include="Media\Movies\Movie.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Core" />
@@ -60,6 +62,7 @@
   <ItemGroup>
     <Folder Include="Media\" />
     <Folder Include="Convertor\" />
+    <Folder Include="Media\Movies\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Convertor\Externals\HandBrakeCLI.exe" />
