--- a/Src/MediaOrganiser.Console/MediaOrganiser.Console.csproj
+++ b/Src/MediaOrganiser.Console/MediaOrganiser.Console.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Commands\Organise.cs" />
     <Compile Include="Organiser.cs" />
+    <Compile Include="Finders\MovieFinder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
