Added a strictSeason flag. This will force the use of the Season-Episode convention. Without this flag, previously shows with only episode # would ignore the season number with getting addition metadata. E.g. ShowName.103.mp4 would have been ShowName - E103.mp4. Now it will be ShowName - SxxExx.mp4.

--- a/Src/MediaOrganiser.Console/MediaOrganiser.Console.csproj
+++ b/Src/MediaOrganiser.Console/MediaOrganiser.Console.csproj
@@ -20,7 +20,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>True</Externalconsole>
-    <Commandlineparameters>-i /Users/Dipesh/Desktop/Input -o /Users/Dipesh/Desktop/Output -x</Commandlineparameters>
+    <Commandlineparameters>-i /Users/Dipesh/Desktop/Input -o /Users/Dipesh/Desktop/Output -s</Commandlineparameters>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
